# hackri

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
app/: CMakeLists.txt
app/001_hello/: CMakeLists.txt  main.cpp
hackri/: CMakeLists.txt  buffer.cpp  color.cpp  image.cpp  main.cpp  model.cpp  renderer.cpp
include/hackri/: array.h  buffer.h  color.h  image.h  math_util.h  mathematics.h  matrix.h  memory_util.h  model.h  renderer.h
